<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/guillotine_background"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/Toolbar"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/guillotine_hamburger"
            style="@style/ImageView.Hamburger"
            android:src="@drawable/ic_menu" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/menu_profile"
        style="@style/LinearLayout.GuillotineItem"
        android:layout_marginTop="@dimen/guillotine_medium_margin">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_profile" />

        <com.joint.turman.app.widget.canarotextview.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/menu_profile" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_client"
        style="@style/LinearLayout.GuillotineItem"
        >
        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_feed" />
        <com.joint.turman.app.widget.canarotextview.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/menu_client"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_linkman"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_feed" />

        <com.joint.turman.app.widget.canarotextview.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/menu_linkman"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/menu_project"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_feed" />

        <com.joint.turman.app.widget.canarotextview.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/menu_project"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/menu_check"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_feed" />

        <com.joint.turman.app.widget.canarotextview.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/menu_check"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/menu_feedback"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_feed" />

        <com.joint.turman.app.widget.canarotextview.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/menu_feedback"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/menu_communion"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_feed" />

        <com.joint.turman.app.widget.canarotextview.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/menu_communion"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/menu_notice"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_feed" />

        <com.joint.turman.app.widget.canarotextview.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/menu_notice"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/guillotine_divider_height" />

    <LinearLayout
        android:id="@+id/settings_group"
        style="@style/LinearLayout.GuillotineItem">

        <ImageView
            style="@style/ImageView.GuillotineItem"
            android:src="@drawable/ic_settings" />

        <com.joint.turman.app.widget.canarotextview.CanaroTextView
            style="@style/TextView.GuillotineItem"
            android:text="@string/menu_settings" />
    </LinearLayout>
</LinearLayout>